# livepeer-network-modules

./: .gitignore  .npmrc  .tool-versions  AGENTS.md  DESIGN.md  PLANS.md  PRODUCT_SENSE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
capability-broker/: .dockerignore  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  go.mod  go.sum
chain-commons/: .golangci.yml  Makefile  README.md  doc.go  go.mod  go.sum
customer-portal/: AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  compose.yaml  package.json  tsconfig.json
daydream-gateway/: AGENTS.md  Dockerfile  README.md  compose.yaml  package.json  tsconfig.json  tsconfig.test.json  vite.ui.config.ts
daydream-portal/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  drizzle.config.ts  package.json
gateway-adapters/: .dockerignore  AGENTS.md  CLAUDE.md  DESIGN.md  Makefile  README.md  package.json
gateway-route-health/: README.md  package.json  tsconfig.json
infra/: README.md
openai-runners/image-model-downloader/: Dockerfile  README.md  pyproject.toml
openai-runners/image-model-downloader/src/: download.py
openai-runners/openai-audio-runner/: Dockerfile  README.md  offering.yaml  pyproject.toml  test.sh
openai-runners/openai-audio-runner/docs/: operator-runbook.md
openai-runners/openai-audio-runner/src/openai_audio_runner/: __init__.py  app.py  whisper_loader.py
openai-runners/openai-image-generation-runner/: Dockerfile  README.md  offering.yaml  pyproject.toml
openai-runners/openai-image-generation-runner/docs/: operator-runbook.md
openai-runners/openai-image-generation-runner/src/openai_image_generation_runner/: __init__.py  app.py  diffusers_loader.py  gpu_probe.py
openai-runners/openai-tts-runner/: Dockerfile  README.md  offering.yaml  pyproject.toml  test.sh
openai-runners/openai-tts-runner/docs/: operator-runbook.md
openai-runners/openai-tts-runner/src/openai_tts_runner/: __init__.py  __main__.py  app.py  kokoro_loader.py
openai-runners/python-runner-base/: Dockerfile  README.md  pyproject.toml
rerank-runner/: AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  build.sh  offering.yaml  pyproject.toml  test.sh
rerank-runner/compose/: docker-compose.yml
rerank-runner/docs/: operator-runbook.md
rerank-runner/model-downloader/: Dockerfile  pyproject.toml
rerank-runner/model-downloader/src/: download.py
rerank-runner/src/rerank_runner/: __init__.py  app.py  model_loader.py
vtuber-pipeline/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
vtuber-pipeline/src/vtuber_pipeline/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/egress/: __init__.py  _test_fakes.py
vtuber-pipeline/src/vtuber_pipeline/egress/config/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/egress/providers/: __init__.py  ffmpeg_runner.py
vtuber-pipeline/src/vtuber_pipeline/egress/repo/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/egress/runtime/: __init__.py  entrypoint.py
vtuber-pipeline/src/vtuber_pipeline/egress/service/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/egress/types/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/egress/ui/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/config/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/repo/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/runtime/: __init__.py  entrypoint.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/service/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/types/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/mock_youtube/ui/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/config/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/providers/: __init__.py  egress_admin.py  gateway.py  youtube.py
vtuber-pipeline/src/vtuber_pipeline/streams/repo/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/runtime/: entrypoint.py
vtuber-pipeline/src/vtuber_pipeline/streams/service/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/types/: __init__.py
vtuber-pipeline/src/vtuber_pipeline/streams/ui/: __init__.py
vtuber-pipeline/tests/: test_egress.py  test_egress_failure_modes.py  test_egress_integration.py  test_mock_youtube.py  test_smoke.py  test_streams_lifecycle.py
vtuber-runner/: AGENTS.md  Dockerfile  README.md  pyproject.toml
vtuber-runner/avatar-renderer/: index.html  package.json  tsconfig.json  vite.config.ts
vtuber-runner/avatar-renderer/src/: main.ts
vtuber-runner/avatar-renderer/src/controllers/: control-ws.ts
vtuber-runner/avatar-renderer/src/encoders/: webcodec.ts
vtuber-runner/avatar-renderer/src/scene/: boot.ts
vtuber-runner/avatar-renderer/tests/: scene-boot.test.ts
vtuber-runner/compose/: docker-compose.yml
vtuber-runner/src/session_runner/: __init__.py  __main__.py
vtuber-runner/src/session_runner/config/: __init__.py  settings.py
vtuber-runner/src/session_runner/providers/: __init__.py  egress_publisher.py  llm_livepeer.py  llm_mock.py  olv_loader.py  playwright_launcher.py  session_bearer_client.py  telemetry.py  trickle.py  tts_livepeer.py  tts_mock.py  vector_log.py  work_units_reporter.py
vtuber-runner/src/session_runner/providers/moderation/: __init__.py  blocklist.py  types.py
vtuber-runner/src/session_runner/runtime/: __init__.py  app.py  entrypoint.py  session_factory.py
vtuber-runner/src/session_runner/service/: __init__.py  audio_mux_sink.py  channels.py  control_dispatcher.py  control_ws.py  conversation.py  egress_segment_sink.py  emotion_mapper.py  manager.py  mux_pipeline.py  output_sink.py  pipeline.py  renderer.py  renderer_chromium.py  renderer_factory.py  renderer_fixture.py  session_pipeline.py  trickle_sink.py
vtuber-runner/src/session_runner/types/: __init__.py  api.py  media.py  state.py
vtuber-runner/src/session_runner/ui/: __init__.py  http.py
vtuber-runner/tests/: test_emotion_mapper.py  test_http.py  test_smoke.py  test_work_units_reporter.py
(+1630 files in other folders)
