[project]
name = "rerank_runner"
version = "0.1.0"
description = "Cohere-compatible /v1/rerank runner — sentence-transformers CrossEncoder."
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "numpy>=1.26.0",
]

[project.scripts]
rerank-runner = "rerank_runner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rerank_runner"]
