[project]
name = "vtuber-pipeline"
version = "0.1.0"
description = "Python SaaS pipeline for the Livepeer vtuber product (mock-youtube chat source, streams orchestrator, egress workers). Calls vtuber-gateway as a meta-customer."
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.27",
    "websockets>=13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
pipeline-mock-youtube = "vtuber_pipeline.mock_youtube.runtime.entrypoint:main"
pipeline-egress = "vtuber_pipeline.egress.runtime.entrypoint:main"
pipeline-streams = "vtuber_pipeline.streams.runtime.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtuber_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
