[project]
name = "openai_audio_runner"
version = "0.1.0"
description = "Whisper STT runner — OpenAI-compatible /v1/audio/transcriptions and /v1/audio/translations."
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.44.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]

[project.scripts]
openai-audio-runner = "openai_audio_runner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_audio_runner"]
