[project]
name = "python-runner-base"
version = "0.1.0"
description = "Shared Python base image for the openai-runners + rerank-runner workload binaries (per OQ2 lock in plan 0013-runners-byoc-migration)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.117.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "structlog>=24.4.0,<25.0.0",
    "uvicorn[standard]>=0.30.0,<0.33.0",
    "prometheus-client>=0.21.0,<0.22.0",
    "python-multipart>=0.0.12,<0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pyproject.toml"]
